--- a/componentes/src/main/res/values/colors.xml
+++ b/componentes/src/main/res/values/colors.xml
@@ -2,6 +2,5 @@
 <resources>
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#FA5F4D</color>
-    <color name="colorRappi">#FA5F4D</color>
+    <color name="colorAccent">#D81B60</color>
 </resources>
