--- a/componentes/src/main/res/layout/card_pelicula.xml
+++ b/componentes/src/main/res/layout/card_pelicula.xml
@@ -3,21 +3,23 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view_="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_height="350dp"
-    android:layout_width="200dp"
-    android:layout_margin="4dp"
-    card_view_:cardCornerRadius="10dp">
+    android:id="@+id/cardContainer"
+    android:layout_width="@dimen/card_default_width"
+    android:layout_height="@dimen/card_default_height"
+    android:layout_marginTop="@dimen/card_default_margin"
+    android:layout_marginEnd="@dimen/card_default_margin"
+    android:layout_marginStart="@dimen/card_default_margin"
+    app:cardCornerRadius="4dp">
+
     <FrameLayout
-        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
         <ImageView
+            style="@style/Card.Image"
             android:id="@+id/ivBackdrop_path"
-            android:layout_width="200dp"
-            android:layout_height="350dp"
-            android:src="@drawable/thor"
-            android:scaleType="centerCrop"
             android:contentDescription="@string/imagen_pelicula" />
+    </FrameLayout>
+
         <!--<FrameLayout
             android:layout_width="200dp"
             android:layout_height="70dp"
@@ -46,5 +48,4 @@
         </FrameLayout>-->
 
 
-    </FrameLayout>
 </androidx.cardview.widget.CardView>
