--- a/componentes/src/main/res/layout/carousel.xml
+++ b/componentes/src/main/res/layout/carousel.xml
@@ -2,21 +2,20 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@android:color/black"
-    android:layout_marginBottom="16dp">
+    android:background="@color/colorPrimary"
+    android:layout_marginTop="4dp"
+    android:layout_marginEnd="4dp"
+    android:layout_marginStart="4dp">
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/itemsRecycler"
         android:layout_width="match_parent"
         android:layout_height="@dimen/carousel_default_height_recyclerview"
-        android:layout_margin="8dp"
-        android:background="@color/black"/>
-
+        android:background="@color/colorPrimary"/>
         <ProgressBar
             android:id="@+id/itemsLoading"
             android:theme="@style/Carousel.ProgressBar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"/>
-
 
 </RelativeLayout>
