--- a/componentes/src/main/res/values/colors.xml
+++ b/componentes/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="colorPrimary">#000000</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
+    <color name="colorOscuro">#1C202C</color>
 </resources>
