--- a/app/src/main/res/layout/activity_vista_detalle.xml
+++ b/app/src/main/res/layout/activity_vista_detalle.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorPrimary"
     tools:context="com.fernandopretell.rappidemo.presentation.VistaDetalleActivity">
 
     <FrameLayout
@@ -27,6 +28,11 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@drawable/gradient" />
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:src="@drawable/ic_play"/>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -35,40 +41,57 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:layout_marginStart="16dp"
+                android:weightSum="3"
+                android:gravity="center_vertical|start|bottom">
                 <FrameLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
                     android:background="@drawable/back_release">
                     <TextView
                         android:id="@+id/tvRelease"
+                        android:text="2017-03-03"
+                        android:padding="8dp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textColor="@android:color/white"
-                        android:fontFamily="@font/lato_black_italic"
-                        android:textSize="18sp"/>
+                        android:fontFamily="@font/lato_black_italic"/>
                 </FrameLayout>
 
                 <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical">
+                    android:layout_width="0dp"
+                    android:layout_weight="2"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical"
+                    android:gravity="end|center"
+                    android:paddingEnd="16dp">
                     <ImageView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:src="@drawable/ic_star"/>
                     <TextView
                         android:id="@+id/voteCount"
+                        android:text="12793 votes"
+                        android:textColor="@android:color/white"
+                        android:textStyle="bold"
+                        android:textSize="16sp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"/>
                 </LinearLayout>
 
                 <TextView
                     android:id="@+id/tv_voteAverage"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
                     android:layout_height="wrap_content"
                     android:textSize="50sp"
-                    android:fontFamily="@font/lato_black_italic"/>
+                    android:text="7.9"
+                    android:gravity="center|bottom"
+
+                    android:layout_marginEnd="16dp"
+                    android:fontFamily="@font/lato_italic"/>
             </LinearLayout>
 
             <TextView
@@ -76,9 +99,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textColor="@android:color/white"
-                android:textSize="22sp"
+                android:textSize="28sp"
+                android:fontFamily="@font/lato_black_italic"
                 android:textAlignment="textStart"
-                android:gravity="start"/>
+                android:gravity="start"
+                android:layout_margin="16dp"/>
         </LinearLayout>
 
     </FrameLayout>
@@ -89,4 +114,35 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         app:layout_constraintGuide_percent="0.5" />
+
+    <TextView
+        android:id="@+id/tvDescripcionEnDetalle"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="16dp"
+        android:fontFamily="@font/lato_italic"
+        android:textColor="@android:color/white"
+        android:textSize="18sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:text="OVERVIEW"
+        android:textStyle="bold"
+        android:textSize="16sp"
+        android:textColor="@android:color/white"
+        android:fontFamily="@font/lato_italic"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/flDetalle" />
 </androidx.constraintlayout.widget.ConstraintLayout>
