--- a/componentes/src/main/res/values/carousel_attrs.xml
+++ b/componentes/src/main/res/values/carousel_attrs.xml
@@ -12,6 +12,7 @@
         <attr name="carousel_textLabel" format="string"/>
         <attr name="carousel_size_textLabel" format="dimension"/>
         <attr name="carousel_height_recycler" format="dimension"/>
+        <attr name="carousel_layout_recycler" format="string"/>
     </declare-styleable>
 
 </resources>
