--- a/app/src/main/res/layout/content_main_scrolling.xml
+++ b/app/src/main/res/layout/content_main_scrolling.xml
@@ -16,16 +16,19 @@
         <com.fernandopretell.componentes.carousel.Carousel
             android:id="@+id/carousel1"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            app:carousel_layout_recycler="linear"/>
         <com.fernandopretell.componentes.carousel.Carousel
             android:id="@+id/carousel2"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            app:carousel_layout_recycler="linear"/>
         <com.fernandopretell.componentes.carousel.Carousel
             android:id="@+id/carousel3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"/>
+            android:layout_marginBottom="8dp"
+            app:carousel_layout_recycler="linear"/>
     </LinearLayout>
 
 
