--- a/componentes/src/main/res/layout/carousel_card_item.xml
+++ b/componentes/src/main/res/layout/carousel_card_item.xml
@@ -3,4 +3,5 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/carouselCard"
     android:layout_width="wrap_content"
-    android:layout_height="match_parent" />
+    android:layout_height="wrap_content"
+    android:layout_margin="2dp"/>
