--- a/componentes/src/main/res/values/carousel_strings.xml
+++ b/componentes/src/main/res/values/carousel_strings.xml
@@ -2,5 +2,6 @@
 <resources>
 
     <string name="carousel_label">Tipos de película</string>
+    <string name="carousel_default_layout_recyclerview">linear</string>
 
 </resources>
