--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -91,25 +91,39 @@
                 android:layout_height="80dp"
                 app:layout_collapseMode="pin"
                 app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
-                <FrameLayout
+                <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent">
-                    <TextView
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal">
+                    <ImageView
+                        android:id="@+id/ivCambiarTema"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:src="@drawable/ic_cambiar_tema"
+                        android:layout_marginEnd="8dp"
+                        android:layout_gravity="center_vertical|end"/>
+                    <androidx.appcompat.widget.AppCompatTextView
                         android:id="@+id/tvTitulo"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="5"
                         android:fontFamily="@font/lato_black_italic"
                         android:textSize="30sp"
                         android:textColor="@android:color/white"
-                        android:gravity="center" />
+                        android:gravity="center"
+                        app:autoSizeTextType="uniform"
+                        app:autoSizeMaxTextSize="30sp"
+                        app:autoSizeMinTextSize="22sp"/>
                     <ImageView
                         android:id="@+id/ivIconBuscador"
-                        android:layout_width="wrap_content"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
+                        android:layout_weight="1"
                         android:src="@drawable/ic_search"
                         android:layout_marginEnd="8dp"
                         android:layout_gravity="center_vertical|end"/>
-                </FrameLayout>
+                </LinearLayout>
 
             </androidx.appcompat.widget.Toolbar>
 
